# ot-harjoitustyo

./: .gitignore  README.md
blockgame/: .coverage  .coveragerc  pyproject.toml  tasks.py
blockgame/dokumentaatio/: arkkitehtuuri.md  arkkitehtuurikuvaus.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
blockgame/src/: main.py
blockgame/src/tests/: test_game_view.py  test_leaderboard_view.py  test_main.py  test_start_view.py
blockgame/src/views/: game_view.py  leaderboard_view.py  start_view.py
dokumentaatio/: tuntikirjanpito.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
