[project]
name = "blockgame"
version = "0.1.0"
description = ""
authors = [
    {name = "Juho Kronlöf",email = "juho.kronlof@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pytest = "^8.3.5"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
